hot fix blocking tut on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -1177,6 +1177,10 @@ button:hover {
 }
 
 @media only screen and (max-width: 1000px) {
+  #tut-start-button {
+    display: none;
+  }
+
   .mobile-nav-button {
     margin: 5px 15vw 0 15vw;
     font-size: 20px;
